@@ -72,11 +72,14 @@ table entry.
 **overload::reify** installs named methods for overloaded operators
 into a package's symbol table. The method names are constructed by
 concatenating a prefix (provided by the `-prefix` option) and a
-standardized operator name (see ["method\_names"](#method_names)).
+standardized operator name (see ["method\_names"](#method_names)). An existing method
+with the same name will be quietly replaced, unless the ["-redefine"](#redefine) option
+is true.
 
 For operators overloaded with a method name which is different from
 the new method name, a wrapper which calls the original method by its
-name is installed.
+name is installed.  If the original and new method names are the same,
+nothing is installed.
 
 For operators overloaded with a code reference, an alias to the code
 reference is installed.
@@ -109,6 +112,12 @@ and `%options` is a hash with one or more of the following keys:
 
     The package into which the methods will be installed.  This defaults
     to the calling package.
+
+- `-redefine`
+
+    A boolean which if true will cause an exception to be thrown if
+    installing the new method would replace an existing one of the same
+    name in the package specified by ["-into"](#into).  Defaults to false.
 
 - `-methods`
 
